# WyckoffSolver

./: .gitignore  README.md  meson.build  pyproject.toml
wyckoff_solver/: __init__.py  cache.py  cli.py  dioph.f90  kinds.f90  linprog.py  meson.build  spacegroup.py  wyckcomb.py
wyckoff_solver/resources/: meson.build  spg_multiplicity.txt  spg_variability.txt
wyckoff_solver/utils/: hash.py  meson.build  singleton.py
