[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'wyckoff-solver'
version = '1.0.0'
description = 'Wyckoff position combination solver'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
  {name = 'Xiaoshan Luo', email = 'luoxs@calypso.cn'},
]
dependencies = [
  'numpy',
  'scipy',
]

[project.scripts]
wycksolver = 'wyckoff_solver.cli:main'
